[gd_scene load_steps=3 format=3 uid="uid://88r2sd3vaknj"]

[ext_resource type="Script" path="res://addons/Uzil/Util/_test/test_signals.gd" id="1_hvnue"]
[ext_resource type="Script" path="res://addons/Uzil/Test/misc/test_debug_log.gd" id="2_6c0lb"]

[node name="root" type="Control" node_paths=PackedStringArray("debug_log")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hvnue")
debug_log = NodePath("HBoxContainer/VBoxContainer2/debug_text_edit")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="test_emit" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(132, 68)
layout_mode = 2
text = "test_emit()"

[node name="test_wait_ctrlr_single" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(132, 68)
layout_mode = 2
text = "test_wait_ctrlr_single()"

[node name="test_wait_ctrlr_queue" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(132, 68)
layout_mode = 2
text = "test_wait_ctrlr_queue()"

[node name="test_wait_ctrlr_clear" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(132, 68)
layout_mode = 2
text = "test_wait_ctrlr_clear()"

[node name="test_wait_ctrlr_fail" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(132, 68)
layout_mode = 2
text = "test_wait_ctrlr_fail()"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="debug_text_edit" type="TextEdit" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_6c0lb")

[connection signal="button_down" from="HBoxContainer/VBoxContainer/test_emit" to="." method="test_emit"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/test_wait_ctrlr_single" to="." method="test_wait_ctrlr_single"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/test_wait_ctrlr_queue" to="." method="test_wait_ctrlr_queue"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/test_wait_ctrlr_clear" to="." method="test_wait_ctrlr_clear"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/test_wait_ctrlr_fail" to="." method="test_wait_ctrlr_fail"]
